--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -6,5 +6,6 @@
     <h1>Samson</h1>
     <p>Jeeranan Kamyoi</p>
     <a href="https://www.youtube.com/watch?v=2SQHLkO8N_Y">Youtube</a>
-    </body>
+    <dvi width="100%" style="text-align:right">ทดสอบข้อความ</dvi>
+</body>
 </html>
