--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -6,8 +6,8 @@
     <h1>Samson</h1>
     <p>Jeeranan Kamyoi</p>
     <a href="https://www.youtube.com/watch?v=2SQHLkO8N_Y">Youtube</a>
-    <dvi width="100%" style="text-align:right">
+    <div width="100%" style="text-align:right">
         ทดสอบข้อความ
-    </dvi>
+    </div>
 </body>
 </html>
