--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -9,5 +9,27 @@
     <div width="100%" style="text-align:right">
         ทดสอบข้อความ
     </div>
+    <em>เอียงครับเอียง</em>
+    <big>พี่บอลสุ่มไม่โดนหนู้วววว</big>
+    <small>ขอความเห็นใจด้วยค่ะ</small>
+    <buttom>99 สาธุ</buttom>
+    <u>ขีดเส้นไว้ว่าเขาไม่รัก</u>
+    <mark>คะแนนไม่ใช่ผลตอบแทนของคนดวงไม่ดี</mark>
+    <section></section>
+    <br>
+    <p>สวัส<sub>ดีค่ะ</sub></p>
+    <img>
+    <time>20.00</time>
+    <address>123 หมู่ 4</address>
+    <datalist>กุ๊ก กุ๊ก</datalist>
+    <picture></picture>
+    <style></style>
+    <strong>หิวข้าว</strong>
+    <video></video>
+    <audio></audio>
+    <figure>จำมะได้</figure>
+    <table th="1" tr="2" td="3">ตาราง</table>
+    <var>ตัวแปร</var>
+    <b>หมดมุขแล้วค้าบบบ</b>
 </body>
 </html>
