--- a/htmllab/index.html
+++ b/htmllab/index.html
@@ -51,6 +51,6 @@
     
     <b>ตัวหนา</b>
 
-   <center>center</center>
+   <center href="https://www.youtube.com/watch?v=yiHukM7rQk8">center</center>
 </body>
 </html>
